crates/tirea-state-derive/tests/ui/lattice_on_map.stderr
error: #[tirea(lattice)] is not supported on Option, Vec, or Map fields.
 --> tests/ui/lattice_on_map.rs:9:12
  |
9 |     field: BTreeMap<String, GCounter>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `GCounter` doesn't implement `Debug`
  --> tests/ui/lattice_on_map.rs:9:5
   |
 6 | #[derive(Debug, Clone, PartialEq, Serialize, Deserialize, State)]
   |          ----- in this derive macro expansion
...
 9 |     field: BTreeMap<String, GCounter>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Debug` is not implemented for `GCounter`
   |
   = note: add `#[derive(Debug)]` to `GCounter` or manually `impl Debug for GCounter`
help: the trait `Debug` is implemented for `BTreeMap<K, V, A>`
  --> $RUST/alloc/src/collections/btree/map.rs
   |
   | impl<K: Debug, V: Debug, A: Allocator + Clone> Debug for BTreeMap<K, V, A> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider annotating `GCounter` with `#[derive(Debug)]`
   |
12 + #[derive(Debug)]
13 | struct GCounter;
   |

error[E0277]: the trait bound `GCounter: Clone` is not satisfied
 --> tests/ui/lattice_on_map.rs:9:5
  |
6 | #[derive(Debug, Clone, PartialEq, Serialize, Deserialize, State)]
  |                 ----- in this derive macro expansion
...
9 |     field: BTreeMap<String, GCounter>,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `GCounter`
  |
  = note: required for `BTreeMap<std::string::String, GCounter>` to implement `Clone`
help: consider annotating `GCounter` with `#[derive(Clone)]`
  |
12+ #[derive(Clone)]
13| struct GCounter;
  |

error[E0369]: binary operation `==` cannot be applied to type `BTreeMap<std::string::String, GCounter>`
  --> tests/ui/lattice_on_map.rs:9:5
   |
 6 | #[derive(Debug, Clone, PartialEq, Serialize, Deserialize, State)]
   |                        --------- in this derive macro expansion
...
 9 |     field: BTreeMap<String, GCounter>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: an implementation of `PartialEq` might be missing for `GCounter`
  --> tests/ui/lattice_on_map.rs:12:1
   |
12 | struct GCounter;
   | ^^^^^^^^^^^^^^^ must implement `PartialEq`
help: consider annotating `GCounter` with `#[derive(PartialEq)]`
   |
12 + #[derive(PartialEq)]
13 | struct GCounter;
   |

error[E0277]: the trait bound `GCounter: serde::Serialize` is not satisfied
  --> tests/ui/lattice_on_map.rs:6:35
   |
 6 | #[derive(Debug, Clone, PartialEq, Serialize, Deserialize, State)]
   |                                   ^^^^^^^^^ unsatisfied trait bound
 7 | struct Bad {
 8 |     #[tirea(lattice)]
   |     - required by a bound introduced by this call
   |
help: the trait `Serialize` is not implemented for `GCounter`
  --> tests/ui/lattice_on_map.rs:12:1
   |
12 | struct GCounter;
   | ^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `GCounter` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `BTreeMap<std::string::String, GCounter>` to implement `Serialize`
note: required by a bound in `_::_serde::ser::SerializeStruct::serialize_field`
  --> $CARGO/serde_core-$VERSION/src/ser/mod.rs
   |
   |     fn serialize_field<T>(&mut self, key: &'static str, value: &T) -> Result<(), Self::Error>
   |        --------------- required by a bound in this associated function
   |     where
   |         T: ?Sized + Serialize;
   |                     ^^^^^^^^^ required by this bound in `SerializeStruct::serialize_field`
   = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `GCounter: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/lattice_on_map.rs:9:12
   |
 9 |     field: BTreeMap<String, GCounter>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Deserialize<'_>` is not implemented for `GCounter`
  --> tests/ui/lattice_on_map.rs:12:1
   |
12 | struct GCounter;
   | ^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `GCounter` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
   = note: required for `BTreeMap<std::string::String, GCounter>` to implement `Deserialize<'_>`
note: required by a bound in `next_element`
  --> $CARGO/serde_core-$VERSION/src/de/mod.rs
   |
   |     fn next_element<T>(&mut self) -> Result<Option<T>, Self::Error>
   |        ------------ required by a bound in this associated function
   |     where
   |         T: Deserialize<'de>,
   |            ^^^^^^^^^^^^^^^^ required by this bound in `SeqAccess::next_element`

error[E0277]: the trait bound `GCounter: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/lattice_on_map.rs:9:12
   |
 9 |     field: BTreeMap<String, GCounter>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Deserialize<'_>` is not implemented for `GCounter`
  --> tests/ui/lattice_on_map.rs:12:1
   |
12 | struct GCounter;
   | ^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `GCounter` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
   = note: required for `BTreeMap<std::string::String, GCounter>` to implement `Deserialize<'_>`
note: required by a bound in `next_value`
  --> $CARGO/serde_core-$VERSION/src/de/mod.rs
   |
   |     fn next_value<V>(&mut self) -> Result<V, Self::Error>
   |        ---------- required by a bound in this associated function
   |     where
   |         V: Deserialize<'de>,
   |            ^^^^^^^^^^^^^^^^ required by this bound in `MapAccess::next_value`

error[E0277]: the trait bound `GCounter: serde::Deserialize<'de>` is not satisfied
  --> tests/ui/lattice_on_map.rs:6:46
   |
 6 | #[derive(Debug, Clone, PartialEq, Serialize, Deserialize, State)]
   |                                              ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Deserialize<'_>` is not implemented for `GCounter`
  --> tests/ui/lattice_on_map.rs:12:1
   |
12 | struct GCounter;
   | ^^^^^^^^^^^^^^^
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `GCounter` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
   = note: required for `BTreeMap<std::string::String, GCounter>` to implement `Deserialize<'_>`
note: required by a bound in `_::_serde::__private228::de::missing_field`
  --> $CARGO/serde-$VERSION/src/private/de.rs
   |
   | pub fn missing_field<'de, V, E>(field: &'static str) -> Result<V, E>
   |        ------------- required by a bound in this function
   | where
   |     V: Deserialize<'de>,
   |        ^^^^^^^^^^^^^^^^ required by this bound in `missing_field`
   = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
